samples/_failures_safe/1761156323_62ea4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34912043.c: In function ‘main’:
./samples/SAFE/__tmp_34912043.c:166:5: error: expected declaration or statement at end of input
  166 |     }
      |     ^
